rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__error__tests__missing_right_paren.snap
---
source: src/nasl/syntax/error.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (missing_right_paren), \"called(me;\")"
snapshot_kind: text
---
error: Unclosed token: '('
  ┌─ missing_right_paren:1:1
  │
1 │ called(me;
  │ ^ Unclosed token: '('
